--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -45,7 +45,7 @@ jobs:
             c_compiler: cl
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -53,6 +53,20 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+
+    - name: Setup Vulkan SDK
+      uses: edvn0/setup-vulkan-sdk@v1.3.0
+      with:
+       vulkan-query-version: 1.3.224.1
+       vulkan-components: Vulkan-Headers, Vulkan-Loader, Glslang 
+       vulkan-use-cache: true
+
+    - name: Test Vulkan SDK Install
+      shell: bash
+      run: |
+        echo "Vulkan SDK Version=='$VULKAN_SDK_VERSION'"
+        echo "VULKAN_SDK=='$VULKAN_SDK'"
+        glslangValidator --version
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
