--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,5 +1,3 @@
-# This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
 name: CMake on multiple platforms
 
 on:
@@ -13,15 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
-
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Release]
@@ -48,7 +38,6 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set reusable strings
-      # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
       shell: bash
       run: |
@@ -68,16 +57,38 @@ jobs:
         echo "VULKAN_SDK=='$VULKAN_SDK'"
         glslangValidator --version
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -S ${{ github.workspace }}
+- name: Download GLM Library
+      run: |
+        GLM_VERSION="0.9.9.8" # Set the GLM version you want to download
+        GLM_DOWNLOAD_URL="https://github.com/g-truc/glm/archive/${GLM_VERSION}.zip"
+        GLM_TEMP_DIR="${{ steps.strings.outputs.build-output-dir }}/glm-temp"
 
-    - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+        mkdir -p $GLM_TEMP_DIR
+        curl -L -o glm.zip $GLM_DOWNLOAD_URL
+        unzip glm.zip -d $GLM_TEMP_DIR
+      shell: bash
+
+    #- name: Move GLM Library to Vulkan SDK Folder
+    #  run: |
+    #    VULKAN_SDK_PATH="$VULKAN_SDK"
+    #    GLM_TEMP_DIR="${{ steps.strings.outputs.build-output-dir }}/glm-temp"
+
+        # Create the glm folder in the Vulkan SDK directory
+    #    mkdir -p "$VULKAN_SDK_PATH/glm"
+
+        # Move the GLM headers to the Vulkan SDK directory
+    #    mv "$GLM_TEMP_DIR/glm-$GLM_VERSION/glm" "$VULKAN_SDK_PATH/glm/"
+
+        # Clean up the temporary directory
+    #    rm -rf "$GLM_TEMP_DIR"
+    #  shell: bash
+    #- name: Configure CMake
+    #  run: >
+    #    cmake -B ${{ steps.strings.outputs.build-output-dir }}
+    #    -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+    #    -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+    #    -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+    #    -S ${{ github.workspace }}
+
+    #- name: Build
+    #  run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
