move render system to  subdirectory

--- a/src/Code/CMakeLists.txt
+++ b/src/Code/CMakeLists.txt
@@ -1,4 +1,7 @@
-file(GLOB_RECURSE SOURCES "*.cpp" "*.h" "*.hpp")
+add_subdirectory(systems)
+file(GLOB_RECURSE SOURCES "*.cpp"         "*.h"         "*.hpp" 
+                          "systems/*.cpp" "systems/*.h" "systems/*.hpp")
+
 
 find_package(Vulkan REQUIRED)
 
